--- a/apps/dashboard/src/app/components/dashboard/dashboard.component.html
+++ b/apps/dashboard/src/app/components/dashboard/dashboard.component.html
@@ -6,18 +6,13 @@
       <div class="flex items-center justify-between">
 
         <!-- Logo and Title -->
-        <div class="hidden md:flex flex-1 items-center justify-between space-x-3 order-1 md:order-none">
+        <div class="hidden md:flex items-center space-x-3">
           <img src="/header.png" alt="TurboVets logo" class="h-12 sm:h-16 w-auto object-contain">
-          <div class="text-center">
-            <h1 class="text-xl font-bold tracking-wide text-center">Task Manager</h1>
-          </div>
-          <div>
-
-          </div>
+          <!-- <h1 class="text-xl font-bold tracking-wide">Task Manager</h1> -->
         </div>
 
         <!-- User Info and Actions -->
-        <div class="flex flex-1 items-center justify-between gap-3 order-1 md:order-none">
+        <div class="flex items-center justify-between md:justify-end gap-3 flex-1 md:flex-none md:ml-auto">
 
           <!-- User Info -->
           <div *ngIf="currentUser" class="block text-left">
